# deliberate-practice

./: .gitmodules  README.md
exercises4programmers/: README.md
exercises4programmers/ch01/python/: README.md  tests.py  tip_calculator.py
exercises4programmers/ch02_input_output/python/: 01_hello.py  02_count.py  03_qutation.py  04_mad_libs.py  05_simple_math.py  06_retirement_calculator.py
exercises4programmers/ch03_operations/python/: 07_rectangle.py
python/: argparser_example.py  circular_buffer.py  dijkstra.py  moving_average.py
python/chai_calculator/: README.md  calculator.py  tests.py
python/data-structures/: tests.py  union_set.py
python/data_structures/: fibonacci_generator.py
python/data_structures/linked_list/: linked_list.py  queue_linked_list.py
python/data_structures/tree/: binary_tree.py  prefix_tree.py
python/study_review/: .gitignore  README.md  graphql_client.py  pyproject.toml  tests.py
scripts/: evaluate_file_state  integer_expression_and  integer_expression_enhenced  integer_expression_not  integer_expression_read  integer_expression_simplify  remove_pyenv.sh  string_expression  sys_info_page
scripts/linux_book_examples/: distros.txt  evaluate_file_state_function  integer_expression  read_menu  sys_info_page  until-count  while-count  while-menu  while-menu2  while-read  while-read2
