[tool.poetry]
name = "study_review"
version = "0.1.0"
description = ""
authors = ["seulchankim <bartkim0426@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
